--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/a1984f0de1.js" crossorigin="anonymous"></script>
 
+<!-- google fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -57,7 +62,7 @@
     </section>
 
     <!-- Carousel Section -->
-    <h1 class="carousel-heading">Interesting English Words</h1>
+    <!-- <h1 class="carousel-heading">Interesting English Words</h1> -->
     <section id="carousel-section">
 
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
