--- a/index.html
+++ b/index.html
@@ -31,38 +31,38 @@
   <div class="flexbox-container">
     <section id="navbar-section">
 
-      <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="brand-col col-lg-4 col-md-3 col-sm-3">
-          <a class="navbar-brand" href="#">DicBoy</a>
-        </div>
-
-        <div class="search-col col-lg-4 col-md-6 col-sm-6">
-          <form class="form-inline my-2 my-lg-0 ml-auto mr-auto ">
-            <input class="form-control me-2 " type="search" placeholder="Search" aria-label="Search">
-            <button class="search-btn btn btn-outline-success " type="submit">Search</button>
-          </form>
-        </div>
-
-<div class="button-col col-lg-4 col-md-3 col-sm-3">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav ml-auto">
-            <a class="nav-link active" aria-current="page" href="#">Log in</a>
-            <a class="nav-link" href="#">Add words</a>
-            <a class="nav-link" href="#">About</a>
-              </div>
+        <nav class="navbar navbar-expand-lg navbar-light">
+          <div class="brand-col col-lg-4 col-md-3 col-sm-3">
+            <a class="navbar-brand" href="#">DicBoy</a>
           </div>
-        </div>
+
+          <div class="search-col col-lg-4 col-md-6 col-sm-6">
+            <form class="form-inline my-2 my-lg-0 ml-auto mr-auto ">
+              <input class="form-control me-2 " type="search" placeholder="Search" aria-label="Search">
+              <button class="search-btn btn btn-outline-success " type="submit">Search</button>
+            </form>
+          </div>
+
+  <div class="button-col col-lg-4 col-md-3 col-sm-3">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav ml-auto">
+              <a class="nav-link active" aria-current="page" href="#">Log in</a>
+              <a class="nav-link" href="#">Add words</a>
+              <a class="nav-link" href="#">About</a>
+                </div>
+            </div>
+          </div>
 
 
-      </nav>
+        </nav>
 
-    </section>
+      </section>
 
     <!-- Carousel Section -->
-    <!-- <h1 class="carousel-heading">Interesting English Words</h1> -->
+    
     <section id="carousel-section">
 
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -118,7 +118,7 @@
     <!-- Categories Section -->
     <section id="categories-section">
       <div class="container-fluid">
-        <div class="row">
+        <div class="row pics-row">
           <div class="cat-col games-col col-lg-4 col-md-4 col-sm-12">
             <img src="images/games.jpg" alt="">
             <p class="cat-p">Games</p>
