--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </section>
 
     <!-- Carousel Section -->
-    
+
     <section id="carousel-section">
 
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -120,15 +120,15 @@
       <div class="container-fluid">
         <div class="row pics-row">
           <div class="cat-col games-col col-lg-4 col-md-4 col-sm-12">
-            <img src="images/games.jpg" alt="">
+            <img class="cat-img"  src="images/games.jpg" alt="">
             <p class="cat-p">Games</p>
           </div>
           <div class="cat-col movies-col col-lg-4 col-md-4 col-sm-12">
-            <img src="images/movies.jpg" alt="">
+            <img class="cat-img" src="images/movies.jpg" alt="">
             <p class="cat-p">Movies</p>
           </div>
           <div class="cat-col books-col col-lg-4 col-md-4 col-sm-12">
-            <img src="images/books.jpg" alt="">
+            <img class="cat-img"  src="images/books.jpg" alt="">
             <p class="cat-p">Books</p>
           </div>
         </div>
