--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 
 
   <!-- title and navbar section -->
+  <div class="thewholething-container">
+
+
   <div class="flexbox-container">
     <section id="navbar-section">
 
@@ -153,6 +156,7 @@
         </div>
       </div>
     </section>
+  </div>
   </div>
 </body>
 
