--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
   <!-- title and navbar section -->
-
+  <div class="thewholething-container">
 
 
   <div class="flexbox-container">
@@ -156,6 +156,7 @@
         </div>
       </div>
     </section>
+  </div>
   </div>
 </body>
 
